add sitemap and image plugin to docs

--- a/apps/docs/docs/spaces.mdx
+++ b/apps/docs/docs/spaces.mdx
@@ -4,12 +4,15 @@ sidebar_label: 🌏 Spaces
 title: Spaces
 ---
 
+import Image from "@theme/IdealImage";
+import editor from "/img/Editor.png";
+
 Spaces are 3D multiplayer environments that serve as the core building blocks of the platform.
 
 ## 🏗️ Creation
 
 <div class="large-img">
-  <img src="/img/Editor.png" alt="Editor" />
+  <Image img={editor} />
 </div>
 
 Spaces can be created for free using the [Editor](https://www.thewired.space/create).
